--- a/front-end/css/vacina.css
+++ b/front-end/css/vacina.css
@@ -1,4 +1,4 @@
-/* agenda.css */
+/* vacina.css */
 body {
     font-family: Arial, sans-serif;
     background-color: #f9f9f9;
@@ -18,16 +18,6 @@ header {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     align-content: space-around;
     align-items: center;
-}
-
-header .logo {
-    display: flex;
-    align-items: center;
-}
-
-header .logo img {
-    width: 100px;
-    margin-right: 10px;
 }
 
 header nav ul {
@@ -68,57 +58,26 @@ header nav ul li a:hover {
     margin-bottom: 20px;
 }
 
-.form-group {
+.main-content h3 {
+    font-size: 20px;
+    margin-top: 20px;
+}
+
+.main-content p {
+    font-size: 16px;
+    line-height: 1.6;
     margin-bottom: 15px;
 }
 
-.form-group label {
-    display: block;
-    font-weight: bold;
-    margin-bottom: 5px;
+.myth-truth {
+    margin-bottom: 30px;
 }
 
-.form-group input,
-.form-group select {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+.myth-truth h4 {
+    font-size: 18px;
+    color: #ff0000;
 }
 
-button.btn {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    font-size: 16px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
-
-button.btn:hover {
-    background-color: #0056b3;
-}
-
-.nav-buttons {
-    display: flex;
-    justify-content: flex-end;
-    gap: 10px;
-    margin-bottom: 20px;
-}
-
-.nav-buttons a {
-    text-decoration: none;
-    background-color: #007bff;
-    color: #fff;
-    padding: 10px 20px;
-    border-radius: 5px;
-    transition: background-color 0.3s;
-}
-
-.nav-buttons a:hover {
-    background-color: #0056b3;
+.myth-truth h4.truth {
+    color: #007bff;
 }
