--- a/front-end/css/login.css
+++ b/front-end/css/login.css
@@ -6,6 +6,24 @@ body {
     height: 100vh;
     margin: 0;
 }
+
+header {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    background-color: #fff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 10px 20px;
+}
+
+header nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: flex-end;
+}
+
 .login {
     background-color: #fff;
     padding: 20px;
